# apache_airflow3_local_dev

./: .gitignore  .vscode_settings_example_for_pytest.json  README.md  docker-compose.yaml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
dags/: airflow_map_and_zip.py  branching_and_trigger_rule.py  dynamic_task_mapping.py  my_dag.py  read_file_dag.py  sharing_data_between_decorator_and_classicoperator.py  specialized_operators.py  task_branching.py  task_group_and_dynamic_task_mapping.py  task_short_circuit.py  taskflow_api_test.py  taskflow_backfill_dag.py  trigger_dag_w_config.py
tests/: task_branching_test.py  test_sample.py
